WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54485
Fix spelling of -inProgramaticScroll
https://bugs.webkit.org/show_bug.cgi?id=54485
Summary
Fix spelling of -inProgramaticScroll
David Kilzer (:ddkilzer)
Reported
2011-02-15 12:06:17 PST
Created
attachment 82497
[details]
Patch Reviewed by NOBODY (OOPS!). * WebView/WebDynamicScrollBarsView.h: * WebView/WebDynamicScrollBarsView.mm: (-[WebDynamicScrollBarsView inProgrammaticScroll]): Renamed from -inProgramaticScroll. * WebView/WebHTMLView.mm: (-[WebHTMLView _frameOrBoundsChanged]): Corrected method name. --- 4 files changed, 16 insertions(+), 3 deletions(-)
Attachments
Patch
(2.79 KB, patch)
2011-02-15 12:06 PST
,
David Kilzer (:ddkilzer)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-02-15 12:07:32 PST
Comment on
attachment 82497
[details]
Patch What about callers outside WebKit?
David Kilzer (:ddkilzer)
Comment 2
2011-02-15 12:46:00 PST
(In reply to
comment #1
)
> (From update of
attachment 82497
[details]
) > What about callers outside WebKit?
Safari doesn't use it. I suspect -inProgramaticScroll should have gone in WebDynamicScrollBarsViewInternal.h anyway. Note that this was added in
r72852
for
Bug 23556
. <
http://trac.webkit.org/changeset/72852
>
Darin Adler
Comment 3
2011-02-15 13:06:24 PST
(In reply to
comment #2
)
> I suspect -inProgramaticScroll should have gone in WebDynamicScrollBarsViewInternal.h anyway.
OK, we should fix that. We could do other research to make sure nothing at Apple is using it, but maybe there hasn’t been time.
David Kilzer (:ddkilzer)
Comment 4
2011-02-15 15:28:08 PST
Committed
r78627
: <
http://trac.webkit.org/changeset/78627
>
David Kilzer (:ddkilzer)
Comment 5
2011-02-15 15:52:51 PST
(In reply to
comment #3
)
> (In reply to
comment #2
) > > I suspect -inProgramaticScroll should have gone in WebDynamicScrollBarsViewInternal.h anyway. > > OK, we should fix that. We could do other research to make sure nothing at Apple is using it, but maybe there hasn’t been time.
I filed
Bug 54505
about moving it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug