<http://webkit.org/b/54485> Fix spelling of -inProgramaticScroll

Reviewed by Darin Adler.

* WebView/WebDynamicScrollBarsView.h:
* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView inProgrammaticScroll]): Renamed from
-inProgramaticScroll.
* WebView/WebHTMLView.mm:
(-[WebHTMLView _frameOrBoundsChanged]): Corrected method name.

Canonical link: https://commits.webkit.org/68622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78627 268f45cc-cd09-0410-ab3c-d52691b4dbfc